# cells

./: Cargo.toml  Makefile.toml  README.md
cmd/cellsd/: Cargo.toml
common/api_version/: Cargo.toml
common/api_version/src/: lib.rs  status_code.rs
common/cells_types/: Cargo.toml
common/cells_types/src/: key.rs  lib.rs
common/cells_utils/: Cargo.toml
common/cells_utils/src/: lib.rs
common/cells_utils/src/codec/: number.rs
common/engine/: Cargo.toml
scripts/setup/: dev_setup.sh
src/: lib.rs
